# AuroraKVM

./: .gitignore  Cargo.toml  README.md  aurorakvm_llm_prompt.md  build-windows.bat  build-windows.ps1  build-windows.sh  build.sh  install-linux.sh
src/: client.rs  config.rs  connected.rs  discovery.rs  event.rs  gui.rs  gui_slint.rs  lib.rs  monitor.rs  net.rs  server.rs  topology.rs
ui/: main.slint
