[package]
name = "aurora_kvm"
version = "0.1.0"
edition = "2024"
default-run = "aurora_server"

[[bin]]
name = "aurora_server"
path = "src/bin/server.rs"

[[bin]]
name = "aurora_client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
slint = "1.9"
rdev = { version = "0.5.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
display-info = "0.5"
hostname = "0.4"

[build-dependencies]
slint-build = "1.9"
